--- a/search/searchpage/standard/style.css
+++ b/search/searchpage/standard/style.css
@@ -2,20 +2,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-}
-
-.clerk-see-more-button {
-    background: #000;
-    color: #fff;
-    cursor: pointer;
-    padding: 15px;
-    border: none;
-}
-
-.clerk-see-more-button:hover {
-    background: #000;
-    color: #fff;
-    border: none;
+    margin: 1em;
 }
 
 .clerk-grid-wrapper {
