I don't know why I haven't changed this earlier - changed right to left

--- a/search/livesearch/grid/style.css
+++ b/search/livesearch/grid/style.css
@@ -282,7 +282,7 @@
     }
     
     .clerk-instant-search-container {
-        right: 0px !important;
+        left: 0px !important;
         width: 100%;
     }
 
